# rebuilt-site

./: .firebaserc  .gitignore  README.md  autoreload.py  non coding hobbies.md  pelicanconf.py  pyproject.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
content/: update-history.md
content/pages/: about.md  game-demo.md  non coding hobbies.md  personal projects.md
output/: archives.html  authors.html  categories.html  index.html  tags.html  update-history.html
output/author/: aya-stead.html
output/category/: misc.html
output/pages/: about.html
scripts/: fetch_update_history.py
theme/static/css/: game-demo.css  style.css
theme/templates/: base.html  game_demo.html  index.html  page.html
