[tool.poetry]
name = "ayasca-dev"
version = "0.1.0"
description = ""
authors = ["AyaPK <Sherbnya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pelican = "^4.11.0"
markdown = "^3.8"

[tool.poetry.group.dev.dependencies]
ghp-import = "^2.1.0"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
